[tool.poetry]
name = "baraeja"
version = "0.1.0"
description = ""
authors = ["Astemir Boziev <bootuz07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.5"
pre-commit = "^3.2.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
