[tool.poetry]
name = "Baraeja"
version = "0.1.0"
description = "Circassian online library"
authors = ["Astemir Boziev <astemirboziy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
pre-commit = "^3.2.2"
python-dotenv = "^1.0.0"
django-cleanup = "^7.0.0"
boto3 = "^1.26.109"
django-storages = "^1.13.2"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
